# workshop_02_aovivo

./: 404.html  README.md  index.html  objects.inv  pyproject.toml
.github/workflows/: CI.yml
app/: etl.py  funcao.py  schema.py
docs/: index.md
exemplo/: exemplo00.py  exemplo02.py
search/: search_index.json
tests/: test_func_etl.py  test_funcao_ola_turma.py
